--- a/Select/select/styles.scss
+++ b/Select/select/styles.scss
@@ -20,6 +20,7 @@ $height: 46px;
 .select {
   width: 100%;
   position: relative;
+  z-index: 100;
 
   &.open {
     .select__dropdown {
@@ -28,6 +29,10 @@ $height: 46px;
 
     .select__input {
       border-bottom: none;
+    }
+
+    .select__backdrop {
+      display: block;
     }
   }
 
@@ -50,7 +55,7 @@ $height: 46px;
     top: $height;
     left: 0;
     right: 0;
-    max-height: 200px;
+    max-height: 207px;
     overflow-y: auto;
     box-shadow: 2px 3px 5px rgba(0, 0, 0, .3);
   }
@@ -61,9 +66,24 @@ $height: 46px;
     list-style: none;
   }
 
+  &__backdrop {
+    position: fixed;
+    display: none;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: transparent;
+  }
+
   &__item {
     padding: 1rem;
     border-bottom: 1px solid #ccc;
+
+    &.selected {
+      background-color: bisque;
+    }
 
     &:hover {
       background-color: #eee;
